# HSV-Wizard

./: .gitignore  HSV-Wizard.py  LICENSE  README.md  pyproject.toml  requirements.txt
code/: hsv_wizard.py
tests/: test_core.py
